# c0ls

./: .gitattributes  .gitignore  Cargo.toml  readme.md
.github/workflows/: ci.yaml
crates/analysis/: Cargo.toml
crates/analysis/src/: db.rs  lib.rs  lines.rs  types.rs  uri.rs  uri_db.rs  uses.rs  util.rs
crates/analysis/src/queries/: all_diagnostics.rs  go_to_def.rs  hover.rs  mod.rs
crates/analysis/src/tests/: mod.rs  other.rs  support.rs
crates/analysis/src/tests/data/: cond.c0  decl_in_for.c0  def.c0  deref_null.c0  div.c0  duplicate_var.c0  hover_ambig.c0  hover_ty.c0  mismatched_num.c0  mismatched_types_any.c0  not_in_loop.c0  recur.c0  return_bad.c0  ty_bad.c0  undefined.c0  unreachable.c0  use_lib.c0
crates/analysis/src/tests/data/transitive/: 2.h0  3.c0
crates/c0ls/: Cargo.toml
crates/c0ls/src/: capabilities.rs  from.rs  main.rs  main_loop.rs  wrapper.rs
crates/cli/: Cargo.toml
crates/cli-neue/: Cargo.toml
crates/cli/src/: main.rs
crates/event-parse/: Cargo.toml
crates/event-parse/src/: lib.rs
crates/fmt/: Cargo.toml
crates/fmt/src/: expr.rs  item.rs  lib.rs  root.rs  simp.rs  stmt.rs  ty.rs  util.rs
crates/hir/: Cargo.toml
crates/hir/src/: lib.rs
crates/identifier-case/: Cargo.toml
crates/identifier-case/src/: lib.rs
crates/lex/: Cargo.toml
crates/lex/src/: lib.rs
crates/lower/: Cargo.toml
crates/lower/src/: expr.rs  item.rs  lib.rs  ptr.rs  root.rs  simp.rs  stmt.rs  ty.rs  util.rs
crates/parse/: Cargo.toml
crates/parse/src/: expr.rs  item.rs  lib.rs  root.rs  simp.rs  stmt.rs  ty.rs  util.rs
crates/statics/: Cargo.toml
crates/statics-neue/: Cargo.toml
crates/statics-neue/src/: expr.rs  lib.rs  root.rs  simp.rs
crates/statics/src/: decl.rs  display.rs  error.rs  expr.rs  import.rs  item.rs  lib.rs  name.rs  root.rs  simp.rs  stmt.rs  ty.rs  types.rs  util.rs
crates/std-lib/: Cargo.toml
crates/std-lib/src/: lib.rs
crates/syntax/: Cargo.toml  build.rs  c0.ungram
crates/syntax-gen/: Cargo.toml
crates/syntax-gen/src/: alt.rs  lib.rs  (+9 more)
crates/syntax-neue/: Cargo.toml  build.rs
crates/syntax/src/: lib.rs
crates/tests/: Cargo.toml
crates/text-pos/: Cargo.toml
crates/topo-sort/: Cargo.toml
crates/unwrap-or/: Cargo.toml
crates/uri-db/: Cargo.toml
crates/uses/: Cargo.toml
docs/: architecture.md
extensions/vscode/: language-configuration.json  package-lock.json  package.json  readme.md
scripts/: ck-test-data.sh  mk-vscode-ext.sh
xtask/: Cargo.toml
xtask/src/: help.txt  main.rs
(+50 files in other folders)
