[package]
name = "analysis"
version = "0.1.0"
authors = ["Ariel Davis <ariel.z.davis@icloud.com>"]
edition = "2018"
publish = false

[lib]
doctest = false

[dependencies]
fmt = { path = "../fmt" }
hir = { path = "../hir" }
lex = { path = "../lex" }
lower = { path = "../lower" }
parse = { path = "../parse" }
rustc-hash = "1"
statics = { path = "../statics" }
std-lib = { path = "../std-lib" }
syntax = { path = "../syntax" }
text-pos = { path = "../text-pos" }
topo-sort = { path = "../topo-sort" }
uri-db = { path = "../uri-db" }
uses = { path = "../uses" }
