[package]
name = "analysis"
version = "0.1.0"
edition = "2018"
publish = false

[lib]
doctest = false

[dependencies]
fmt = { path = "../fmt" }
hir = { path = "../hir" }
lex = { path = "../lex" }
lower = { path = "../lower" }
parse = { path = "../parse" }
rustc-hash = "1"
statics = { path = "../statics" }
std-lib = { path = "../std-lib" }
syntax = { path = "../syntax" }
text-pos = { git = "https://github.com/azdavis/language-server-util.git" }
topo-sort = { git = "https://github.com/azdavis/language-server-util.git" }
uri-db = { git = "https://github.com/azdavis/language-server-util.git" }
uses = { path = "../uses" }
