[package]
name = "syntax"
version = "0.1.0"
authors = ["Ariel Davis <ariel.z.davis@icloud.com>"]
edition = "2018"
publish = false

[lib]
doctest = false
test = false

[dependencies]
event-parse = { path = "../event-parse" }
rowan = "0.12"

[build-dependencies]
syntax-gen = { path = "../syntax-gen" }
